# primetrade-auth

./: README.md  main.py  package-lock.json  pyproject.toml
app/config/: database.py  dependencies.py  settings.py
app/models/: schemas.py
app/routes/: auth.py  notes.py  user.py
app/services/: authhandler.py  errorhandlers.py  notehandler.py  userhandler.py
app/utils/: jwtutil.py  passhashutils.py  response.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/config/: axios.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
