[project]
name = "primetrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "itsdangerous>=2.2.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
